8349766: GenShen: Bad progress after degen does not always need full gc

Reviewed-by: wkemper